--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="wrapper fadeInDown">
   <div id="formContent">
     <form>
+      <img src="https://giphy.com/embed/Vk0foG0izDUXu" width="200" frameBorder="0">
       <div class="form-group">
         <span tabindex="0" data-toggle="tooltip" title="Passaporte da pessoa que trouxe o veículo">
           <label for="lblPassaporte">Passaporte Cliente</label>
@@ -16,19 +17,19 @@
       <div class="form-group">
         <span data-toggle="tooltip" title="Valor a ser guardado no Baú">
           <label for="lblValorBau">Valor Baú</label>
-          <input type="number" class="form-control" id="txtVlrBau" placeholder="Baú" disabled>
+          <input class="form-control" id="txtVlrBau" placeholder="Baú" disabled>
         </span>
       </div>
       <div class="form-group">
         <span data-toggle="tooltip" title="Valor a ser entregue ao Cliente">
           <label for="lblValorCliente">Valor Cliente</label>
-          <input type="number" class="form-control" id="txtVlrCliente" placeholder="Cliente" disabled>
+          <input class="form-control" id="txtVlrCliente" placeholder="Cliente" disabled>
         </span>
       </div>
       <div class="form-group">
         <span data-toggle="tooltip" title="Sua parte do dinheiro">
           <label for="lblValorMec">Valor Mecânico</label>
-          <input type="number" class="form-control" id="txtVlrMec" placeholder="Mecânico" disabled>
+          <input class="form-control" id="txtVlrMec" placeholder="Mecânico" disabled>
         </span>
         <span tabindex="2" data-toggle="tooltip" title="Só marcar esta opção se você for Booster no nosso Discord.">
           <input class="form-check-input" type="checkbox" value="" id="chkBoosterMec">
@@ -38,14 +39,15 @@
         </span>
       </div>
       <div class="form-group">
-        <span tabindex="3" data-toggle="tooltip" title="Só marcar esta opção caso o cliente dizer ser parceiro (verificar canal parceiros).">
-        <label for="lblParceria">Parceria</label>
-        <select class="form-control" id="txtParceria">
-          <option value="0">Sem Parceria</option>
-          <option value="1">Parceiro</option>
-          <option value="2">Aliança</option>
-        </select>
-      </span>
+        <span tabindex="3" data-toggle="tooltip"
+          title="Só marca esta opção caso o cliente informar ser parceiro (verificar canal parceiros).">
+          <label for="lblParceria">Parceria</label>
+          <select class="form-control" id="txtParceria">
+            <option value="0">Sem Parceria</option>
+            <option value="1">Parceiro</option>
+            <option value="2">Aliança</option>
+          </select>
+        </span>
       </div>
       <div class="form-group">
         <button type="button" class="btn btn-success" id="Calcular">Calcular</button>
