--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,32 +1,3 @@
-
-/* BASIC */
-
-html {
-  background-color: #56baed;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  height: 100vh;
-}
-
-a {
-  color: #92badd;
-  display:inline-block;
-  text-decoration: none;
-  font-weight: 400;
-}
-
-h2 {
-  text-align: center;
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-  display:inline-block;
-  margin: 40px 8px 10px 8px;
-  color: #cccccc;
-}
-
 /* STRUCTURE */
 .wrapper {
   display: flex;
@@ -36,13 +7,12 @@ h2 {
   width: 100%;
   min-height: 100%;
   padding: 10px;
-  margin-top: 30px;
 }
 
 #formContent {
   -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
-  background: #fff;
+  background: rgb(43, 42, 42);
   padding: 30px;
   width: 100%;
   max-width: 450px;
@@ -55,12 +25,16 @@ h2 {
 
 /* TABS */
 h2.inactive {
-  color: #cccccc;
+  color: cyan;
 }
 
 h2.active {
-  color: #0d0d0d;
+  color: cyan;
   border-bottom: 2px solid #5fbae9;
+}
+
+label {
+  color: white
 }
 
 .fadeInDown {
