--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,21 @@
     background-attachment: fixed;
     background-size: 100% 100%;
   }
-  </style>
-<body>
-  <div class="wrapper fadeInDown">
+</style>
+
+<!--<body>
+   <div class="wrapper fadeInDown card">
     <div id="formContent">
       <form [formGroup]="calcForm">
-        <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="200" frameBorder="0">
+        <div class="logo mb-3">
+          <div class="col-md-20 text-center">
+           <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="100" frameBorder="0">
+           <h1>Moto Clube</h1>
+          </div>
+       </div>
         <div class="form-group" style="margin-top: 10px;">
           <span tabindex="0" data-toggle="tooltip" title="Passaporte da pessoa que trouxe o veículo">
-            <label for="lblPassaporte">Passaporte Cliente</label>
+            <label for="lblPassaporte">Passaporte</label>
             <input required type="number" class="form-control" id="txtPassaporte" placeholder="Passaporte" min="0"
               formControlName="Passaporte">
           </span>
@@ -64,6 +70,10 @@
         <div class="form-group">
           <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right;">
             <div class="btn-group mr-2" role="group">
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalSequencia"
+                data-whatever="@mdo">Sequencia</button>
+            </div>
+            <div class="btn-group mr-2" role="group">
               <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
                 (click)="CalcularValores()">Calcular</button>
             </div>
@@ -75,4 +85,121 @@
       </form>
     </div>
   </div>
+</body>-->
+
+<body>
+  <div class="d-flex justify-content-center h-100">
+    <div class="card">
+      <div class="card-header" style="text-align: center;">
+        <h1>Moto Clube</h1>
+      </div>
+      <div class="card-body">
+        <form [formGroup]="calcForm">
+          <div class="form-group" style="text-align: center;">
+            <span tabindex="0" data-toggle="tooltip" title="Passaporte da pessoa que trouxe o veículo">
+              <label for="lblPassaporte">Passaporte</label>
+              <input required type="number" class="form-control" id="txtPassaporte" placeholder="Passaporte" min="0"
+                formControlName="Passaporte">
+            </span>
+          </div>
+          <div class="form-group" style="text-align: center;">
+            <span tabindex="1" data-toggle="tooltip" title="Valor total sujo">
+              <label for="lblValorTotal">Valor Total</label>
+              <input type="number" class="form-control" id="txtVlrTotal" placeholder="Total" min="0"
+                formControlName="ValorTotal">
+            </span>
+          </div>
+          <div class="form-group" style="text-align: center;">
+            <span data-toggle="tooltip" title="Valor a ser guardado no Baú">
+              <label for="lblValorBau">Valor Baú</label>
+              <input class="form-control" id="txtVlrBau" placeholder="Baú" formControlName="ValorBau">
+            </span>
+          </div>
+          <div class="form-group" style="text-align: center;">
+            <span data-toggle="tooltip" title="Valor a ser entregue ao Cliente">
+              <label for="lblValorCliente">Valor Cliente</label>
+              <input class="form-control" id="txtVlrCliente" placeholder="Cliente" formControlName="ValorCliente">
+            </span>
+          </div>
+          <div class="form-group" style="text-align: center;">
+            <span data-toggle="tooltip" title="Sua parte do dinheiro">
+              <label for="lblValorMec">Valor Mecânico</label>
+              <input class="form-control" id="txtVlrMec" placeholder="Mecânico" formControlName="ValorMecanico">
+            </span>
+            <span tabindex="2" data-toggle="tooltip"
+              title="Só marcar esta opção se você for Booster no nosso Discord. O mau uso é passível de exoneração (Lembre-se verificamos sempre as logs e sua meta).">
+              <input class="form-check-input" type="checkbox" value="" id="chkBoosterMec" formControlName="Booster">
+              <label class="form-check-label" for="lblBooster">
+                Booster
+              </label>
+            </span>
+          </div>
+          <div class="form-group" style="text-align: center;">
+            <span tabindex="3" data-toggle="tooltip"
+              title="Só marca esta opção caso o cliente informar ser parceiro (verificar canal parceiros).">
+              <label for="lblParceria">Parceria</label>
+              <select class="form-control" id="txtParceria" formControlName="Parceria">
+                <option value="0" selected>Sem Parceria</option>
+                <option value="1">Parceiro</option>
+                <option value="2">Aliança</option>
+              </select>
+            </span>
+          </div>
+        </form>
+      </div>
+      <div class="card-footer">
+        <div class="form-group">
+          <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right; margin-top: 10px;">
+            <!-- <div class="btn-group mr-2" role="group">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalSequencia"
+              data-whatever="@mdo">Sequencia</button>
+          </div> -->
+            <div class="btn-group mr-2" role="group">
+              <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
+                (click)="CalcularValores()">Calcular</button>
+            </div>
+            <div class="btn-group mr-2" role="group">
+              <button type="button" class="btn btn-danger mx-auto d-block" id="Limpar">Limpar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
+<script>
+  $('#modalSequencia').on('show.bs.modal', function (event) {
+    var button = $(event.relatedTarget)
+    var recipient = button.data('whatever')
+    var modal = $(this)
+    modal.find('.modal-title').text('New message to ' + recipient)
+    modal.find('.modal-body input').val(recipient)
+  })
+</script>
+
+<div class="modal fade" id="modalSequencia" tabindex="-1" role="dialog" aria-labelledby="modalSequenciaLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalSequenciaLabel">Sequência</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="message-text" class="col-form-label">Message:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
