--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
   }
 </style>
 
-<!--<body>
-   <div class="wrapper fadeInDown card">
+<body>
+   <div class="wrapper fadeInDown">
     <div id="formContent">
       <form [formGroup]="calcForm">
         <div class="logo mb-3">
@@ -69,10 +69,10 @@
         </div>
         <div class="form-group">
           <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right;">
-            <div class="btn-group mr-2" role="group">
+            <!-- <div class="btn-group mr-2" role="group">
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalSequencia"
                 data-whatever="@mdo">Sequencia</button>
-            </div>
+            </div> -->
             <div class="btn-group mr-2" role="group">
               <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
                 (click)="CalcularValores()">Calcular</button>
@@ -83,87 +83,6 @@
           </div>
         </div>
       </form>
-    </div>
-  </div>
-</body>-->
-
-<body>
-  <div class="d-flex justify-content-center h-100">
-    <div class="card">
-      <div class="card-header" style="text-align: center;">
-        <h1>Moto Clube</h1>
-      </div>
-      <div class="card-body">
-        <form [formGroup]="calcForm">
-          <div class="form-group" style="text-align: center;">
-            <span tabindex="0" data-toggle="tooltip" title="Passaporte da pessoa que trouxe o veículo">
-              <label for="lblPassaporte">Passaporte</label>
-              <input required type="number" class="form-control" id="txtPassaporte" placeholder="Passaporte" min="0"
-                formControlName="Passaporte">
-            </span>
-          </div>
-          <div class="form-group" style="text-align: center;">
-            <span tabindex="1" data-toggle="tooltip" title="Valor total sujo">
-              <label for="lblValorTotal">Valor Total</label>
-              <input type="number" class="form-control" id="txtVlrTotal" placeholder="Total" min="0"
-                formControlName="ValorTotal">
-            </span>
-          </div>
-          <div class="form-group" style="text-align: center;">
-            <span data-toggle="tooltip" title="Valor a ser guardado no Baú">
-              <label for="lblValorBau">Valor Baú</label>
-              <input class="form-control" id="txtVlrBau" placeholder="Baú" formControlName="ValorBau">
-            </span>
-          </div>
-          <div class="form-group" style="text-align: center;">
-            <span data-toggle="tooltip" title="Valor a ser entregue ao Cliente">
-              <label for="lblValorCliente">Valor Cliente</label>
-              <input class="form-control" id="txtVlrCliente" placeholder="Cliente" formControlName="ValorCliente">
-            </span>
-          </div>
-          <div class="form-group" style="text-align: center;">
-            <span data-toggle="tooltip" title="Sua parte do dinheiro">
-              <label for="lblValorMec">Valor Mecânico</label>
-              <input class="form-control" id="txtVlrMec" placeholder="Mecânico" formControlName="ValorMecanico">
-            </span>
-            <span tabindex="2" data-toggle="tooltip"
-              title="Só marcar esta opção se você for Booster no nosso Discord. O mau uso é passível de exoneração (Lembre-se verificamos sempre as logs e sua meta).">
-              <input class="form-check-input" type="checkbox" value="" id="chkBoosterMec" formControlName="Booster">
-              <label class="form-check-label" for="lblBooster">
-                Booster
-              </label>
-            </span>
-          </div>
-          <div class="form-group" style="text-align: center;">
-            <span tabindex="3" data-toggle="tooltip"
-              title="Só marca esta opção caso o cliente informar ser parceiro (verificar canal parceiros).">
-              <label for="lblParceria">Parceria</label>
-              <select class="form-control" id="txtParceria" formControlName="Parceria">
-                <option value="0" selected>Sem Parceria</option>
-                <option value="1">Parceiro</option>
-                <option value="2">Aliança</option>
-              </select>
-            </span>
-          </div>
-        </form>
-      </div>
-      <div class="card-footer">
-        <div class="form-group">
-          <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right; margin-top: 10px;">
-            <!-- <div class="btn-group mr-2" role="group">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalSequencia"
-              data-whatever="@mdo">Sequencia</button>
-          </div> -->
-            <div class="btn-group mr-2" role="group">
-              <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
-                (click)="CalcularValores()">Calcular</button>
-            </div>
-            <div class="btn-group mr-2" role="group">
-              <button type="button" class="btn btn-danger mx-auto d-block" id="Limpar">Limpar</button>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </body>
