--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -40,6 +40,32 @@ input,select{
   text-align: center;
 }
 
+#formHeader {
+  border-bottom: 1px solid rgba(0,0,0,0.3);
+  padding: 30px;
+  text-align: center;
+  -webkit-border-radius: 0px 0px 0px 0px;
+  border-radius: 0px 0px 0px 0px;
+  width: 100%;
+  max-width: 450px;
+  position: relative;
+  padding: 15px;
+  text-align: center;
+}
+
+#formFooter {
+  border-top: 1px solid rgba(0,0,0,0.3);
+  padding: 5px;
+  text-align: center;
+  -webkit-border-radius: 0px 0px 0px 0px;
+  border-radius: 0px 0px 0px 0px;
+  width: 100%;
+  max-width: 450px;
+  position: relative;
+  padding: 5px;
+  text-align: center;
+}
+
 /* TABS */
  h2.inactive {
   color: cyan;
