Correção no botão de limpar.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -99,7 +99,7 @@
                 (click)="CalcularValores()">Calcular</button>
             </div>
             <div class="btn-group mr-2" role="group">
-              <button type="button" class="btn btn-danger mx-auto d-block" id="Limpar">Limpar</button>
+              <button type="button" class="btn btn-danger mx-auto d-block" id="Limpar" (click)="LimparCampos()">Limpar</button>
             </div>
           </div>
         </div>
