--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,15 +18,17 @@
 </head>
 
 <body>
-  <div class="wrapper fadeInDown">
-    <div id="formContent">
-      <form [formGroup]="calcForm">
-        <div class="logo mb-3">
-          <div class="col-md-20 text-center" id="formHeader">
-            <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="120" frameBorder="0">
-            <h1>Moto Clube</h1>
-          </div>
-          <!-- <div class="col-md-30 text-center">
+  <div class="row">
+    <div class="col-9">
+      <div class="wrapper fadeInDown">
+        <div id="formContent">
+          <form [formGroup]="calcForm">
+            <div class="logo mb-3">
+              <div class="col-md-20 text-center" id="formHeader">
+                <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="120" frameBorder="0">
+                <h1>Moto Clube</h1>
+              </div>
+              <!-- <div class="col-md-30 text-center">
             <div class="btn-group mr-2" role="group">
               <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="80" frameBorder="0">
             </div>
@@ -37,73 +39,81 @@
               <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="80" frameBorder="0">
             </div>
           </div> -->
-        </div>
-        <div class="form-group" style="margin-top: 10px;">
-          <span tabindex="0" data-toggle="tooltip" title="Passaporte da pessoa que trouxe o veículo">
-            <label for="lblPassaporte">Passaporte</label>
-            <input required type="number" class="form-control" id="txtPassaporte" placeholder="Passaporte" min="0"
-              formControlName="Passaporte">
-          </span>
-        </div>
-        <div class="form-group">
-          <span tabindex="1" data-toggle="tooltip" title="Valor total sujo">
-            <label for="lblValorTotal">Valor Total</label>
-            <input type="number" class="form-control" id="txtVlrTotal" placeholder="Total" min="0"
-              formControlName="ValorTotal">
-          </span>
-        </div>
-        <div class="form-group">
-          <span data-toggle="tooltip" title="Valor a ser guardado no Baú">
-            <label for="lblValorBau">Valor Baú</label>
-            <input class="form-control" id="txtVlrBau" placeholder="Baú" formControlName="ValorBau">
-          </span>
-        </div>
-        <div class="form-group">
-          <span data-toggle="tooltip" title="Valor a ser entregue ao Cliente">
-            <label for="lblValorCliente">Valor Cliente</label>
-            <input class="form-control" id="txtVlrCliente" placeholder="Cliente" formControlName="ValorCliente">
-          </span>
-        </div>
-        <div class="form-group">
-          <span data-toggle="tooltip" title="Sua parte do dinheiro">
-            <label for="lblValorMec">Valor Mecânico</label>
-            <input class="form-control" id="txtVlrMec" placeholder="Mecânico" formControlName="ValorMecanico">
-          </span>
-          <span tabindex="2" data-toggle="tooltip"
-            title="Só marcar esta opção se você for Booster no nosso Discord. O mau uso é passível de exoneração (Lembre-se verificamos sempre as logs e sua meta).">
-            <input class="form-check-input" type="checkbox" value="" id="chkBoosterMec" formControlName="Booster">
-            <label class="form-check-label" for="lblBooster">
-              Booster
-            </label>
-          </span>
-        </div>
-        <div class="form-group">
-          <span tabindex="3" data-toggle="tooltip"
-            title="Só marca esta opção caso o cliente informar ser parceiro (verificar canal parceiros).">
-            <label for="lblParceria">Parceria</label>
-            <select class="form-control" id="txtParceria" formControlName="Parceria">
-              <option value="0" selected>Sem Parceria</option>
-              <option value="1">Parceiro</option>
-              <option value="2">Aliança</option>
-            </select>
-          </span>
-        </div>
-        <div class="form-group" id="formFooter">
-          <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right; margin-top: 10px;">
-            <!-- <div class="btn-group mr-2" role="group">
+            </div>
+            <div class="form-group" style="margin-top: 10px;">
+              <span tabindex="0" data-toggle="tooltip" title="Passaporte da pessoa que trouxe o veículo">
+                <label for="lblPassaporte">Passaporte</label>
+                <input required type="number" class="form-control" id="txtPassaporte" placeholder="Passaporte" min="0"
+                  formControlName="Passaporte">
+              </span>
+            </div>
+            <div class="form-group">
+              <span tabindex="1" data-toggle="tooltip" title="Valor total sujo">
+                <label for="lblValorTotal">Valor Total</label>
+                <input type="number" class="form-control" id="txtVlrTotal" placeholder="Total" min="0"
+                  formControlName="ValorTotal">
+              </span>
+            </div>
+            <div class="form-group">
+              <span data-toggle="tooltip" title="Valor a ser guardado no Baú">
+                <label for="lblValorBau">Valor Baú</label>
+                <input class="form-control" id="txtVlrBau" placeholder="Baú" formControlName="ValorBau">
+              </span>
+            </div>
+            <div class="form-group">
+              <span data-toggle="tooltip" title="Valor a ser entregue ao Cliente">
+                <label for="lblValorCliente">Valor Cliente</label>
+                <input class="form-control" id="txtVlrCliente" placeholder="Cliente" formControlName="ValorCliente">
+              </span>
+            </div>
+            <div class="form-group">
+              <span data-toggle="tooltip" title="Sua parte do dinheiro">
+                <label for="lblValorMec">Valor Mecânico</label>
+                <input class="form-control" id="txtVlrMec" placeholder="Mecânico" formControlName="ValorMecanico">
+              </span>
+              <span tabindex="2" data-toggle="tooltip"
+                title="Só marcar esta opção se você for Booster no nosso Discord. O mau uso é passível de exoneração (Lembre-se verificamos sempre as logs e sua meta).">
+                <input class="form-check-input" type="checkbox" value="" id="chkBoosterMec" formControlName="Booster">
+                <label class="form-check-label" for="lblBooster">
+                  Booster
+                </label>
+              </span>
+            </div>
+            <div class="form-group">
+              <span tabindex="3" data-toggle="tooltip"
+                title="Só marca esta opção caso o cliente informar ser parceiro (verificar canal parceiros).">
+                <label for="lblParceria">Parceria</label>
+                <select class="form-control" id="txtParceria" formControlName="Parceria">
+                  <option value="0" selected>Sem Parceria</option>
+                  <option value="1">Parceiro</option>
+                  <option value="2">Aliança</option>
+                </select>
+              </span>
+            </div>
+            <div class="form-group" id="formFooter">
+              <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right; margin-top: 10px;">
+                <!-- <div class="btn-group mr-2" role="group">
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalSequencia"
                 data-whatever="@mdo">Sequencia</button>
             </div> -->
-            <div class="btn-group mr-2" role="group">
-              <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
-                (click)="CalcularValores()">Calcular</button>
+                <div class="btn-group mr-2" role="group">
+                  <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
+                    (click)="CalcularValores()">Calcular</button>
+                </div>
+                <div class="btn-group mr-2" role="group">
+                  <button type="button" class="btn btn-danger mx-auto d-block" id="Limpar"
+                    (click)="LimparCampos()">Limpar</button>
+                </div>
+              </div>
             </div>
-            <div class="btn-group mr-2" role="group">
-              <button type="button" class="btn btn-danger mx-auto d-block" id="Limpar" (click)="LimparCampos()">Limpar</button>
-            </div>
-          </div>
+          </form>
         </div>
-      </form>
+      </div>
+    </div>
+    <div class="col-3 wrapper fadeInDown" style="padding-left: 5px;">
+      <iframe src="https://discord.com/widget?id=922237582090309683&theme=dark" width="300" height="500"
+        allowtransparency="true" frameborder="0"
+        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
