--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <style>
   body {
-    background-image: url('favicon.ico');
+    background-image: url('https://s2.glbimg.com/h3MqViai828AxNeEW0GFrvBzDoY=/0x0:695x390/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2021/4/Q/hHIFbOQB2ziluAugKWbg/2016-09-19-grand-theft-auto-5-gta-online-motoqueiros-motoclube.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
@@ -18,27 +18,14 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="col-9">
       <div class="wrapper fadeInDown">
         <div id="formContent">
           <form [formGroup]="calcForm">
             <div class="logo mb-3">
               <div class="col-md-20 text-center" id="formHeader">
-                <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="120" frameBorder="0">
+                <img src="favicon.ico" width="120" frameBorder="0">
                 <h1>Moto Clube</h1>
               </div>
-              <!-- <div class="col-md-30 text-center">
-            <div class="btn-group mr-2" role="group">
-              <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="80" frameBorder="0">
-            </div>
-            <div class="btn-group mr-2" role="group">
-              <h1>Moto Clube</h1>
-            </div>
-            <div class="btn-group mr-2" role="group">
-              <img src="https://media.giphy.com/media/Vk0foG0izDUXu/giphy.gif" width="80" frameBorder="0">
-            </div>
-          </div> -->
             </div>
             <div class="form-group" style="margin-top: 10px;">
               <span tabindex="0" data-toggle="tooltip" title="Passaporte da pessoa que trouxe o veículo">
@@ -92,10 +79,6 @@
             </div>
             <div class="form-group" id="formFooter">
               <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right; margin-top: 10px;">
-                <!-- <div class="btn-group mr-2" role="group">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalSequencia"
-                data-whatever="@mdo">Sequencia</button>
-            </div> -->
                 <div class="btn-group mr-2" role="group">
                   <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
                     (click)="CalcularValores()">Calcular</button>
@@ -109,13 +92,6 @@
           </form>
         </div>
       </div>
-    </div>
-    <div class="col-3 wrapper fadeInDown" style="padding-left: 5px;">
-      <iframe src="https://discord.com/widget?id=922237582090309683&theme=dark" width="300" height="500"
-        allowtransparency="true" frameborder="0"
-        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-    </div>
-  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -126,39 +102,3 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 </body>
-
-<script>
-  $('#modalSequencia').on('show.bs.modal', function (event) {
-    var button = $(event.relatedTarget)
-    var recipient = button.data('whatever')
-    var modal = $(this)
-    modal.find('.modal-title').text('New message to ' + recipient)
-    modal.find('.modal-body input').val(recipient)
-  })
-</script>
-
-<div class="modal fade" id="modalSequencia" tabindex="-1" role="dialog" aria-labelledby="modalSequenciaLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modalSequenciaLabel">Sequência</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
-      </div>
-    </div>
-  </div>
-</div>
