--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,11 +18,11 @@ input,select{
 .wrapper {
   display: flex;
   align-items: center;
-  flex-direction: column;
+  /*flex-direction: column;*/
   justify-content: center;
   width: 100%;
   min-height: 100%;
-  padding: 10px;
+  padding: 5px;
 }
 
 #formContent {
