--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,4 +115,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+  <p style="color: azure;"><a href="https://copyrightservice.net/pt/copyright_notice"
+      title="Avisos de direitos autorais" style="color: azure;">Avisos de direitos autorais</a> - © Copyright©2022, Moto
+    Clube - Hells Angels. Todos os direitos reservados.</p>
 </body>
