--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,7 +84,11 @@
           </span>
         </div>
         <div class="form-group" id="formFooter">
-          <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right; margin-top: 10px;">
+          <div class="btn-toolbar mx-auto d-block" role="toolbar" style="text-align: right; margin-top: 10px; flex-direction: column;">
+            <div class="btn-group mr-2" role="group">
+              <button type="button" data-target="#ModalParceiros" class="btn btn-primary mx-auto d-block"
+               style="text-align: left;" id="Parceiros" (click)="AbrirModalParceiros()">Parceiros</button>
+            </div>
             <div class="btn-group mr-2" role="group">
               <button type="button" class="btn btn-success mx-auto d-block" id="Calcular"
                 (click)="CalcularValores()">Calcular</button>
@@ -115,7 +119,28 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
   <p style="color: azure;"><a href="https://copyrightservice.net/pt/copyright_notice"
-      title="Avisos de direitos autorais" style="color: azure;">Avisos de direitos autorais</a> - © Copyright©2022, Moto
+      title="Avisos de direitos autorais" style="color: azure; padding-top:5px;">Avisos de direitos autorais</a> - © Copyright©2022, Moto
     Clube - Hells Angels. Todos os direitos reservados.</p>
 </body>
+
+<!-- Modal para visualizar parceiros -->
+<div class="modal fade dark-modal" id="ModalParceiros" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="TituloModalCentralizado">Parceiros</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
